# docquery

./: .env.example  .gitignore  README.md  docker_compose.yml
backend/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
backend/app/: main.py
frontend/: README.md  next.config.ts  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: ChatMessage.tsx  CitationPanel.tsx  FileUpload.tsx  Providers.tsx  ThemeToggle.tsx
